# Notes

./: .gitignore  README.md
cloud/functions/: README.md
cloud/functions/code/: .funcignore  .gitignore  Cargo.toml  handler
cloud/functions/code/src/: blob.rs  jwt.rs  main.rs  table.rs  util.rs
cloud/functions/get_nonce/: .gitignore  Cargo.toml  handler  host.json
cloud/functions/get_nonce/src/: main.rs
cloud/functions/infra/: main.bicep  main.json  parameters.json  resources.bicep
local/: README.md
local/macos/: Cargo.toml  notes.entitlements  readme.md
local/macos/Notes.app/Contents/: Info.plist
local/macos/src/: main.rs
local/shared/: Cargo.toml
local/shared/src/: auth.rs  blob.rs  lib.rs
local/windows/: Cargo.toml
local/windows/src/: main.rs  microsoft_auth.rs
tools/: README.md  add_user.sh  clear_expired_codes.sh  create_link_code.sh  delete_user.sh  funcdeploy.sh
