[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = { version = ">=0.1", features = ["exception"] }
objc2-foundation = { version = ">=0.1", features = ["NSException", "NSTimer", "NSError", "NSData"] }
objc2-app-kit = ">=0.1"
objc2-authentication-services = { version = ">=0.1", features = [
    "ASAuthorizationAppleIDButton",
    "ASAuthorizationAppleIDProvider",
    "ASAuthorizationAppleIDRequest",
    "ASAuthorizationAppleIDCredential",
    "ASAuthorizationController",
    "ASAuthorizationOpenIDRequest",
    "ASAuthorizationRequest",
    "ASAuthorization",
    "ASAuthorizationCredential",
    "ASFoundation",
] }

# Azure + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["alloc"] }
httpdate = "1"
log = "0.4"
oslog = { version = "0.2", features = ["logger"] }
