[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1.65", features = ["rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls_Dialogs",
]
