[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1.65", features = ["rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
jsonwebtoken = "9"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls_Dialogs",
]
