[package]
name = "handler"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
rand = "0.10"
ureq = { version = "3", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"